[gd_scene load_steps=13 format=3 uid="uid://caewm1r4scg2q"]

[ext_resource type="Script" path="res://player/weapons/projectile/projectiles/dynamite/dynamite_explosion.gd" id="1_n3xf4"]
[ext_resource type="AudioStream" uid="uid://b1ooitkb0veuk" path="res://player/weapons/projectile/sfx/explosion.wav" id="2_gj2iu"]
[ext_resource type="Script" path="res://player/weapons/projectile/explosion_damage_calculation.gd" id="3_bey53"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j1igx"]
radius = 200.0

[sub_resource type="Gradient" id="Gradient_ckevj"]
offsets = PackedFloat32Array(0.0785908, 0.208672, 0.392954, 0.97832)
colors = PackedColorArray(1, 1, 1, 1, 0.97328, 0.39599, 1.54018e-06, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xekml"]
gradient = SubResource("Gradient_ckevj")

[sub_resource type="Curve" id="Curve_ve3w7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.419554, 0.775985), 0.0, 0.0, 0, 0, Vector2(0.917079, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_tm1xq"]
curve = SubResource("Curve_ve3w7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m3pty"]
resource_local_to_scene = true
particle_flag_disable_z = true
angle_min = -156.2
angle_max = 161.1
spread = 180.0
initial_velocity_min = 239.75
initial_velocity_max = 569.88
gravity = Vector3(0, 0, 0)
scale_min = 6.09
scale_max = 19.45
scale_curve = SubResource("CurveTexture_tm1xq")
color_ramp = SubResource("GradientTexture1D_xekml")
turbulence_enabled = true
turbulence_influence_min = 0.018
turbulence_influence_max = 0.212

[sub_resource type="Animation" id="Animation_4nv5e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6m0wd"]
resource_name = "explode"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplosionSoundEffect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_udko1"]
_data = {
"RESET": SubResource("Animation_4nv5e"),
"explode": SubResource("Animation_6m0wd")
}

[node name="ImpactGrenadeExplosion" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_n3xf4")

[node name="ExplosionRadius" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j1igx")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_m3pty")
one_shot = true
explosiveness = 1.0

[node name="DetonationTimer" type="Timer" parent="."]
autostart = true

[node name="ExplosionSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_gj2iu")
volume_db = 15.0
bus = &"Effects"

[node name="ExplosionAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_udko1")
}

[node name="DamageCalculation" type="Node" parent="."]
script = ExtResource("3_bey53")
